third_party/rust/cxx/v1/crate/tests/ui/enum_match_without_wildcard.stderr
error[E0004]: non-exhaustive patterns: `ffi::A { repr: 2_u8..=u8::MAX }` not covered
  --> tests/ui/enum_match_without_wildcard.rs:12:11
   |
12 |     match a {
   |           ^ pattern `ffi::A { repr: 2_u8..=u8::MAX }` not covered
   |
note: `ffi::A` defined here
  --> tests/ui/enum_match_without_wildcard.rs:3:10
   |
3  |     enum A {
   |          ^
   = note: the matched value is of type `ffi::A`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
14 ~         ffi::A::FieldB => 2021,
15 ~         ffi::A { repr: 2_u8..=u8::MAX } => todo!(),
   |
